--- a/_config.yml
+++ b/_config.yml
@@ -21,16 +21,16 @@ url: https://jv-conseil.github.io/jekyll-theme-deepdive/
 lang: en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title: DeepDive
+title: URHazy
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description: >
-  Why DeepDive 🌊 Because the format is liquid 💦 😉
+  Unpaired Real-world Hazy image dataset
 
 # A shorter description for the sidebar.
 # tagline: Change `tagline` in `_config.yml`
-tagline: Why DeepDive 🌊 Because the format is liquid 💦 😉
+tagline: Unpaired Real-world Hazy image dataset
 
 # A list of keywords for your blog
 keywords: []
@@ -50,12 +50,14 @@ author:
 
 # Add links to the sidebar.
 menu:
-   - title: Example
-     url: /example/
-   - title: Documentation
-     url: /docs/
    - title: About
      url: /about/
+   - title: Dataset
+     url: /example/
+   - title: Publications
+     url: /docs/
+   - title: Publications
+     url: /docs/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
