--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # General settings
 # ---------------------------------------------------------------------------------------
 
-url: https://jv-conseil.github.io/jekyll-theme-deepdive/
+# url: https://jv-conseil.github.io/jekyll-theme-deepdive/
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
