--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ description: >
 
 # A shorter description for the sidebar.
 # tagline: Change `tagline` in `_config.yml`
-tagline: Advancing Real-world Image Dehazing: A Comprehensive Dataset and Evaluation Metrics
+tagline: Advancing Real-world Image Dehazing - A Comprehensive Dataset and Evaluation Metrics
 
 # A list of keywords for your blog
 keywords: [real-world image dehazing, datasets, IQA metrics, research, computer vision]
@@ -50,14 +50,14 @@ author:
 
 # Add links to the sidebar.
 menu:
-   - title: About
-     url: /about/
+#   - title: About
+#     url: /about/
    - title: Dataset
      url: /dataset/
    - title: Quality Metrics
      url: /metrics/
-   - title: Code
-     url: /docs/
+#   - title: Code
+#     url: /docs/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
